<resources>
    <string name="app_name">Learning Time</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_main">Main</string>

    <string name="watchlist_fragment">Watchlist fragment</string>
    <string name="favorites_fragment">Favorite fragment</string>
    <string name="popular_movies_fragment">Popular Movies fragment</string>
    <string name="popular_tv_fragment">Popular TV fragment</string>
    <string name="watchlist">Watchlist</string>
    <string name="favorites">Favorites</string>
    <string name="dialog">Dialog</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="popular_tv">Popular TV</string>
    <string name="movie_details">Movie Details</string>
    <string name="tv_details">Tv Details</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_watchlist_movies">Watchlist Movies</string>
    <string name="menu_favorite_movies">Favorite Movies</string>


    <string name="title_home">Home</string>
    <string name="title_popular_tv">TV</string>
    <string name="title_popular_movies">Movies</string>


</resources>