<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_popular_movies"
            android:icon="@drawable/ic_movie_black_24dp"
            android:title="@string/title_popular_movies" />
        <item
            android:id="@+id/navigation_watchlist_movies"
            android:icon="@drawable/ic_playlist_black_24dp"
            android:title="@string/menu_watchlist_movies" />
        <item
            android:id="@+id/navigation_favorite_movies"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/menu_favorite_movies" />
    </group>
</menu>