<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.MainFragment">

    <Button
        android:id="@+id/btn_popular_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popular_tv"
        app:layout_constraintBottom_toTopOf="@+id/btn_popular_movies"
        app:layout_constraintEnd_toEndOf="@+id/btn_popular_movies"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btn_popular_movies"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/btn_popular_movies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popular_movies"
        app:layout_constraintBottom_toTopOf="@+id/btn_watchlist"
        app:layout_constraintEnd_toEndOf="@+id/btn_watchlist"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btn_watchlist"
        app:layout_constraintTop_toBottomOf="@+id/btn_popular_tv" />

    <Button
        android:id="@+id/btn_watchlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/watchlist"
        app:layout_constraintBottom_toTopOf="@+id/btn_favorites"
        app:layout_constraintEnd_toEndOf="@+id/btn_favorites"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btn_favorites"
        app:layout_constraintTop_toBottomOf="@+id/btn_popular_movies" />

    <Button
        android:id="@+id/btn_favorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favorites"
        app:layout_constraintBottom_toTopOf="@+id/btn_dialog"
        app:layout_constraintEnd_toEndOf="@+id/btn_dialog"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btn_dialog"
        app:layout_constraintTop_toBottomOf="@+id/btn_watchlist" />

    <Button
        android:id="@+id/btn_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_favorites" />


</androidx.constraintlayout.widget.ConstraintLayout>